Fixed body text size and width on smaller screen sizes.

--- a/sites/all/themes/eshell/less/production.less
+++ b/sites/all/themes/eshell/less/production.less
@@ -395,6 +395,7 @@ p{
   color: #333;
   line-height: 2;
   float: left;
+  width: 100%;
   margin: 1vw 0;
 }
 a{
@@ -1085,7 +1086,7 @@ Article Teaser Display Mode Read More
 			top: 0;
 		}
 		p{
-			font-size: 2.2vw;
+			font-size: 1em;
 			padding: 0 10%;
 		}
 	}
