--- a/sites/all/themes/eshell/less/src/base.less
+++ b/sites/all/themes/eshell/less/src/base.less
@@ -103,6 +103,7 @@ p{
   color: #333;
   line-height: 2;
   float: left;
+  width: 100%;
   margin: 1vw 0;
 }
 a{
