--- a/sites/all/themes/eshell/less/src/media-queries/small.less
+++ b/sites/all/themes/eshell/less/src/media-queries/small.less
@@ -69,7 +69,7 @@
 			top: 0;
 		}
 		p{
-			font-size: 2.2vw;
+			font-size: 1em;
 			padding: 0 10%;
 		}
 	}
